# eecse4764-aiot-project

./: README.md  pyproject.toml  run.sh
.github/workflows/: deploy_website.yaml
llm/: .gitignore  bert.txt  catch_all_server.py  diagnostic_report_20251205_134114.txt  diagnostic_report_20251205_141151.txt  llm.py  medical_device_training.jsonl  medical_device_training_data.xlsx  no_train.txt  receiving_main.py  receiving_main_bert_gpt_hybrid.py  report_rag_fewshot_20251206_151015.txt  report_rag_fewshot_20251207_184929.txt  report_rag_fewshot_20251207_190335.txt  report_rag_fewshot_20251207_190405.txt  report_rag_fewshot_20251207_193114.txt  report_rag_fewshot_20251207_193127.txt  report_rag_fewshot_20251207_194424.txt  report_rag_fewshot_20251207_194438.txt  report_rag_fewshot_20251207_194455.txt  report_rag_fewshot_20251207_194512.txt  report_rag_fewshot_20251207_194530.txt  report_rag_fewshot_20251207_194546.txt  report_rag_fewshot_20251207_194602.txt  report_rag_fewshot_20251207_194618.txt  sender.py  server_bert_gpt_hybrid.py  test_catch_all_server.py
llm_server/: .gitignore
llm_server/reports/: example_report_rag_fewshot_20251209_122027.txt
mcu/: main.py  mock_database.py  si7021.py  ssd1306.py
medical_device/: .gitignore  logs_db.py  logs_pipeline.py  logs_server.py  test_client_logs_server.py  utils.py  ventilator_01.py
project_website/: index.html
project_website/assets/css/: main.css
