[project]
name = "aiot-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
mcu = [
    "esptool>=5.1.0",
    "mpfshell>=0.9.3",
]
medical-device = [
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "httpx>=0.27.0",
]
