[project]
name = "aiot-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
llm = [
    "fastapi>=0.124.0",
    "fastapi-poe>=0.0.81",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
mcu = [
    "esptool>=5.1.0",
    "mpfshell>=0.9.3",
]
medical-device = [
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "httpx>=0.27.0",
]
